minidecaf/generated/ExprParser.py
# Generated from ./Expr.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'break'", "'continue'", "'['", "']'", "'='", 
                     "'?'", "':'", "'||'", "'&&'", "'-'", "'~'", "'!'", 
                     "'&'", "'+'", "'/'", "'%'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'int'", "'return'", "'('", 
                     "')'", "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Int", "Return", "Lparen", "Rparen", 
                      "Lbrace", "Rbrace", "Comma", "Semicolon", "Punctuator", 
                      "Whitespace", "Integer", "Identifier" ]

    RULE_program = 0
    RULE_globalDeclare = 1
    RULE_func = 2
    RULE_paramlist = 3
    RULE_paramDeclare = 4
    RULE_tp = 5
    RULE_block = 6
    RULE_blockitem = 7
    RULE_statement = 8
    RULE_declaration = 9
    RULE_exprlist = 10
    RULE_expr = 11
    RULE_assignment = 12
    RULE_conditional = 13
    RULE_logicalOr = 14
    RULE_logicalAnd = 15
    RULE_equality = 16
    RULE_relational = 17
    RULE_additive = 18
    RULE_multiplicative = 19
    RULE_unary = 20
    RULE_postfix = 21
    RULE_primary = 22
    RULE_unOperator = 23
    RULE_addOperator = 24
    RULE_mulOperator = 25
    RULE_eqOperator = 26
    RULE_relOperator = 27

    ruleNames =  [ "program", "globalDeclare", "func", "paramlist", "paramDeclare", 
                   "tp", "block", "blockitem", "statement", "declaration", 
                   "exprlist", "expr", "assignment", "conditional", "logicalOr", 
                   "logicalAnd", "equality", "relational", "additive", "multiplicative", 
                   "unary", "postfix", "primary", "unOperator", "addOperator", 
                   "mulOperator", "eqOperator", "relOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    Int=29
    Return=30
    Lparen=31
    Rparen=32
    Lbrace=33
    Rbrace=34
    Comma=35
    Semicolon=36
    Punctuator=37
    Whitespace=38
    Integer=39
    Identifier=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def globalDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.GlobalDeclareContext)
            else:
                return self.getTypedRuleContext(ExprParser.GlobalDeclareContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self.globalDeclare()
                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ExprParser.Int):
                    break

            self.state = 61
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_globalDeclare

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SymbolGlobalDeclareContext(GlobalDeclareContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.GlobalDeclareContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaration(self):
            return self.getTypedRuleContext(ExprParser.DeclarationContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbolGlobalDeclare" ):
                return visitor.visitSymbolGlobalDeclare(self)
            else:
                return visitor.visitChildren(self)


    class FuncGlobalDeclareContext(GlobalDeclareContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.GlobalDeclareContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func(self):
            return self.getTypedRuleContext(ExprParser.FuncContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncGlobalDeclare" ):
                return visitor.visitFuncGlobalDeclare(self)
            else:
                return visitor.visitChildren(self)



    def globalDeclare(self):

        localctx = ExprParser.GlobalDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalDeclare)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = ExprParser.FuncGlobalDeclareContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.func()
                pass

            elif la_ == 2:
                localctx = ExprParser.SymbolGlobalDeclareContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_func

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDefineContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tp(self):
            return self.getTypedRuleContext(ExprParser.TpContext,0)

        def Identifier(self):
            return self.getToken(ExprParser.Identifier, 0)
        def Lparen(self):
            return self.getToken(ExprParser.Lparen, 0)
        def paramlist(self):
            return self.getTypedRuleContext(ExprParser.ParamlistContext,0)

        def Rparen(self):
            return self.getToken(ExprParser.Rparen, 0)
        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDefine" ):
                return visitor.visitFuncDefine(self)
            else:
                return visitor.visitChildren(self)


    class FuncDeclareContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tp(self):
            return self.getTypedRuleContext(ExprParser.TpContext,0)

        def Identifier(self):
            return self.getToken(ExprParser.Identifier, 0)
        def Lparen(self):
            return self.getToken(ExprParser.Lparen, 0)
        def paramlist(self):
            return self.getTypedRuleContext(ExprParser.ParamlistContext,0)

        def Rparen(self):
            return self.getToken(ExprParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclare" ):
                return visitor.visitFuncDeclare(self)
            else:
                return visitor.visitChildren(self)



    def func(self):

        localctx = ExprParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ExprParser.FuncDefineContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.tp(0)
                self.state = 68
                self.match(ExprParser.Identifier)
                self.state = 69
                self.match(ExprParser.Lparen)
                self.state = 70
                self.paramlist()
                self.state = 71
                self.match(ExprParser.Rparen)
                self.state = 72
                self.block()
                pass

            elif la_ == 2:
                localctx = ExprParser.FuncDeclareContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.tp(0)
                self.state = 75
                self.match(ExprParser.Identifier)
                self.state = 76
                self.match(ExprParser.Lparen)
                self.state = 77
                self.paramlist()
                self.state = 78
                self.match(ExprParser.Rparen)
                self.state = 79
                self.match(ExprParser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ParamDeclareContext)
            else:
                return self.getTypedRuleContext(ExprParser.ParamDeclareContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.Comma)
            else:
                return self.getToken(ExprParser.Comma, i)

        def getRuleIndex(self):
            return ExprParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = ExprParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExprParser.Int:
                self.state = 83
                self.paramDeclare()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ExprParser.Comma:
                    self.state = 84
                    self.match(ExprParser.Comma)
                    self.state = 85
                    self.paramDeclare()
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tp(self):
            return self.getTypedRuleContext(ExprParser.TpContext,0)


        def Identifier(self):
            return self.getToken(ExprParser.Identifier, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_paramDeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamDeclare" ):
                return visitor.visitParamDeclare(self)
            else:
                return visitor.visitChildren(self)




    def paramDeclare(self):

        localctx = ExprParser.ParamDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramDeclare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.tp(0)
            self.state = 94
            self.match(ExprParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_tp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ScalarContext(TpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.TpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Int(self):
            return self.getToken(ExprParser.Int, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScalar" ):
                return visitor.visitScalar(self)
            else:
                return visitor.visitChildren(self)


    class PointerContext(TpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.TpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tp(self):
            return self.getTypedRuleContext(ExprParser.TpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer" ):
                return visitor.visitPointer(self)
            else:
                return visitor.visitChildren(self)



    def tp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.TpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_tp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ExprParser.ScalarContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 97
            self.match(ExprParser.Int)
            self._ctx.stop = self._input.LT(-1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.PointerContext(self, ExprParser.TpContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_tp)
                    self.state = 99
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 100
                    self.match(ExprParser.T__0) 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Lbrace(self):
            return self.getToken(ExprParser.Lbrace, 0)

        def Rbrace(self):
            return self.getToken(ExprParser.Rbrace, 0)

        def blockitem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.BlockitemContext)
            else:
                return self.getTypedRuleContext(ExprParser.BlockitemContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ExprParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ExprParser.Lbrace)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.T__0) | (1 << ExprParser.T__1) | (1 << ExprParser.T__3) | (1 << ExprParser.T__4) | (1 << ExprParser.T__5) | (1 << ExprParser.T__6) | (1 << ExprParser.T__7) | (1 << ExprParser.T__15) | (1 << ExprParser.T__16) | (1 << ExprParser.T__17) | (1 << ExprParser.T__18) | (1 << ExprParser.Int) | (1 << ExprParser.Return) | (1 << ExprParser.Lparen) | (1 << ExprParser.Lbrace) | (1 << ExprParser.Semicolon) | (1 << ExprParser.Integer) | (1 << ExprParser.Identifier))) != 0):
                self.state = 107
                self.blockitem()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(ExprParser.Rbrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockitemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_blockitem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclareStatementContext(BlockitemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.BlockitemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaration(self):
            return self.getTypedRuleContext(ExprParser.DeclarationContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclareStatement" ):
                return visitor.visitDeclareStatement(self)
            else:
                return visitor.visitChildren(self)


    class SingleStatementContext(BlockitemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.BlockitemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(ExprParser.StatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleStatement" ):
                return visitor.visitSingleStatement(self)
            else:
                return visitor.visitChildren(self)



    def blockitem(self):

        localctx = ExprParser.BlockitemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_blockitem)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.T__0, ExprParser.T__1, ExprParser.T__3, ExprParser.T__4, ExprParser.T__5, ExprParser.T__6, ExprParser.T__7, ExprParser.T__15, ExprParser.T__16, ExprParser.T__17, ExprParser.T__18, ExprParser.Return, ExprParser.Lparen, ExprParser.Lbrace, ExprParser.Semicolon, ExprParser.Integer, ExprParser.Identifier]:
                localctx = ExprParser.SingleStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.statement()
                pass
            elif token in [ExprParser.Int]:
                localctx = ExprParser.DeclareStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForDeclareStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.pre = None # DeclarationContext
            self.cond = None # ExprContext
            self.post = None # ExprContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(ExprParser.Lparen, 0)
        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)
        def Rparen(self):
            return self.getToken(ExprParser.Rparen, 0)
        def statement(self):
            return self.getTypedRuleContext(ExprParser.StatementContext,0)

        def declaration(self):
            return self.getTypedRuleContext(ExprParser.DeclarationContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForDeclareStatement" ):
                return visitor.visitForDeclareStatement(self)
            else:
                return visitor.visitChildren(self)


    class BreakStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.thens = None # StatementContext
            self.elses = None # StatementContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(ExprParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(ExprParser.Rparen, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)


    class NullStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullStatement" ):
                return visitor.visitNullStatement(self)
            else:
                return visitor.visitChildren(self)


    class ForNaiveStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.pre = None # ExprContext
            self.cond = None # ExprContext
            self.post = None # ExprContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(ExprParser.Lparen, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.Semicolon)
            else:
                return self.getToken(ExprParser.Semicolon, i)
        def Rparen(self):
            return self.getToken(ExprParser.Rparen, 0)
        def statement(self):
            return self.getTypedRuleContext(ExprParser.StatementContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForNaiveStatement" ):
                return visitor.visitForNaiveStatement(self)
            else:
                return visitor.visitChildren(self)


    class ExprStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStatement" ):
                return visitor.visitExprStatement(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(ExprParser.StatementContext,0)

        def Lparen(self):
            return self.getToken(ExprParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(ExprParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStatement" ):
                return visitor.visitDoWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(ExprParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(ExprParser.Rparen, 0)
        def statement(self):
            return self.getTypedRuleContext(ExprParser.StatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class RetStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Return(self):
            return self.getToken(ExprParser.Return, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetStatement" ):
                return visitor.visitRetStatement(self)
            else:
                return visitor.visitChildren(self)


    class ContinueStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(ExprParser.Semicolon, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStatement" ):
                return visitor.visitContinueStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                localctx = ExprParser.RetStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(ExprParser.Return)
                self.state = 120
                self.expr()
                self.state = 121
                self.match(ExprParser.Semicolon)
                pass

            elif la_ == 2:
                localctx = ExprParser.ExprStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.expr()
                self.state = 124
                self.match(ExprParser.Semicolon)
                pass

            elif la_ == 3:
                localctx = ExprParser.NullStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(ExprParser.Semicolon)
                pass

            elif la_ == 4:
                localctx = ExprParser.BlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.block()
                pass

            elif la_ == 5:
                localctx = ExprParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.match(ExprParser.T__1)
                self.state = 129
                self.match(ExprParser.Lparen)
                self.state = 130
                self.expr()
                self.state = 131
                self.match(ExprParser.Rparen)
                self.state = 132
                localctx.thens = self.statement()
                self.state = 135
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 133
                    self.match(ExprParser.T__2)
                    self.state = 134
                    localctx.elses = self.statement()


                pass

            elif la_ == 6:
                localctx = ExprParser.ForNaiveStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.match(ExprParser.T__3)
                self.state = 138
                self.match(ExprParser.Lparen)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.T__0) | (1 << ExprParser.T__15) | (1 << ExprParser.T__16) | (1 << ExprParser.T__17) | (1 << ExprParser.T__18) | (1 << ExprParser.Lparen) | (1 << ExprParser.Integer) | (1 << ExprParser.Identifier))) != 0):
                    self.state = 139
                    localctx.pre = self.expr()

